<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        android:paddingTop="60dp"
        android:id="@+id/helloTV"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/helloTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="20dp"
        android:id="@+id/instructionsTV"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:text="@string/Gender"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/genderTV"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/genderRG"
        app:layout_constraintTop_toBottomOf="@+id/genderTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="30dp"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/genderRGFemale"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/genderRGMale"
            />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genderRG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:text="@string/AgeGroup"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/ageGroupTV"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ageGroupRG"
        app:layout_constraintTop_toBottomOf="@+id/ageGroupTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="3dp"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Under20"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/ageGroupU20"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Twenties"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/ageGroupTwenties"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thirties"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/ageGroupThirties"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forties"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"
            android:id="@+id/ageGroupForties"
            />

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>